# GraphOptimizer

./: .gitignore  CMakeLists.txt  GraphMaker.pyproj  NumVal.py  README.md  c_lib.py  c_platform.py  cintertest.py  compiler.py  graph.py  group.py  main.py  make.sh  refrence_lib.py  refrence_platform.py  refrence_test.py  test.c  test.s
backend_src/: GraphCompiler.pro  abs_processes.h  c_codegen.cpp  c_codegen.h  compcode.cpp  compcode.h  graph_backend.h  graph_pqueue.h  graph_pqueue_test.cpp  graph_types.h  main.cpp  oldgraphcode.txt  oper.h  plat_test.cpp  sub_graph.cpp  test.h  test_framework.cpp  utility.h
backend_src/basic/: basic_kernel.cpp  basic_kernel.h  basic_names.h  basic_plat.cpp  basic_plat.h  basic_processes.h  concatenize.cpp
backend_src/cpp_interface/: group.h  platform.h  test.cpp
backend_src/x86/: abs_process.h  dis_op_process.h  disopt_kern.cpp  disopt_kern.h  loop_proc.h  loopization.cpp  mem_impl.h  scalar_proc.h
backend_srs/: GraphCompiler.pro  abstract_block.h  c_codegen.cpp  c_codegen.h  compcode.cpp  compcode.h  graph_backend.h  graph_pqueue.h  graph_pqueue_test.cpp  graph_types.h  main.cpp  make.sh  oldcode.txt  oper.h  plat_test.cpp  process.h  process_maker.h  ref_test.cpp  sub_graph.cpp  sub_graph.h  test.h  test_framework.cpp  utility.cpp  utility.h
backend_srs/basic/: basic_kernel.cpp  basic_kernel.h  basic_names.h  basic_plat.cpp  basic_plat.h  basic_processes.h
backend_srs/x86/: basic_kernel.cpp  basic_kernel.h  basic_plat.cpp  basic_plat.h  basicblock.cpp  basicblock.h  basicloop.cpp  basicloop.h  disopt_kern.cpp  disopt_kern.h
doc/: bennotes.md  lang.md  lang2.md  locality.md  opt_notes.md
metacompiler/: main.ml  main.py  notes.md
